--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Feedbacks: <small><br />Do you want do add some feedback? <a href="" ui-sref="feedback">Click Here</a></small></h1>
+      <h1 class="page-header">Feedbacks: <small><br />Do you want to add some feedback? <a href="" ui-sref="feedback">Click Here</a></small></h1>
 
       <div class="list-group">
         <a href="#" class="list-group-item" data-ng-class="{ active: fb.active }" ng-mouseover="fb.active = true;" ng-mouseleave="fb.active = false" data-ng-repeat="fb in main.mainFeedbacks">
